# mysql-udf-http

./: CMakeLists.txt  Dockerfile  README.md  build.sh  compose.yml  init.sql  lower_case.cnf
include/mysql/: my_config_x86_64.h  mysql_version.h
src/: mysql-udf-http.c
